Updated Background Css
Updated Background-Image Colors to Linear Gradient, consolidated the header, few minor additions for website optimization

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
                 <ul>
 
-                        <li><a href="#">&nbsp; &#124; Services/Products</a></li>
+                        <li>&nbsp; &#124; &nbsp;<a href="#">Services/Products</a></li>
 
                         
                         <li><a href="#">Contacts</a></li>
