Updated Th and p
Updated Table header  to a more relevant description, enlarged font-size for p tag

--- a/index.html
+++ b/index.html
@@ -76,9 +76,8 @@
         <table style="width:100%">
                 <tr>
                   <th>Company Name</th>
-                  <th>Service</th>
-                  <th>VS</th>
-                  <th>VS</th>
+                  <th>Service Type</th>
+                  <th>Price</th>
                 </tr>
                 <tr>
                   <td><span>DD'S</span> HVAC</td>
